fix: add margin to embed to fix focus/hovering clipping issue
fix https://github.com/pengx17/logseq-dev-theme/issues/69

--- a/src/_embed.scss
+++ b/src/_embed.scss
@@ -6,7 +6,7 @@
   padding: 0.75em 0.5em;
   border: 2px solid #000;
   border-radius: 8px;
-  margin: 0.2em 0 0.5em;
+  margin: 0.5em;
   transition: all ease-in 0.3s;
 }
 
